--- a/lib/style.mod.less
+++ b/lib/style.mod.less
@@ -1,11 +1,13 @@
-.ql-container{
-	min-height: 100px;
-	background-color: #fff;
+:global {
+	.ql-container{
+		min-height: 100px;
+		background-color: #fff;
 
-	&.ql-disabled{
-		background-color: #f7f7f7;
+		&.ql-disabled{
+			background-color: #f7f7f7;
+		}
 	}
-}
-.ql-toolbar{
-	height: 40px;
+	.ql-toolbar{
+		height: 40px;
+	}
 }
