取色板宽度调整

--- a/lib/style.mod.less
+++ b/lib/style.mod.less
@@ -1,13 +1,18 @@
 :global {
-	.ql-container{
+	.ql-container {
 		min-height: 100px;
 		background-color: #fff;
 
-		&.ql-disabled{
+		&.ql-disabled {
 			background-color: #f7f7f7;
 		}
 	}
-	.ql-toolbar{
+
+	.ql-toolbar {
 		height: 40px;
+	}
+
+	.ql-snow .ql-color-picker .ql-picker-options {
+		width: 172px;
 	}
 }
