--- a/src/style.mod.less
+++ b/src/style.mod.less
@@ -1,18 +1,10 @@
-:global {
-	.ql-container {
-		min-height: 100px;
-		background-color: #fff;
-
-		&.ql-disabled {
-			background-color: #f7f7f7;
-		}
-	}
-
-	.ql-toolbar {
-		height: 40px;
-	}
-
-	.ql-snow .ql-color-picker .ql-picker-options {
-		width: 172px;
-	}
+.wox-editor {
+    height: 275px !important;
+    border: 1px solid #ccc !important;
+    padding: 15px !important;
+    border-radius: 2px !important;
 }
+.wox-wrapper{
+	border: 1px solid #ccc !important;
+}
+
