--- a/src/style.mod.less
+++ b/src/style.mod.less
@@ -7,4 +7,40 @@
 .wox-wrapper{
 	border: 1px solid #ccc !important;
 }
+:global{
+	.rdw-colorpicker-modal{
+		width: 230px !important;
+		height: auto !important;
+		
+	}
+	.rdw-colorpicker-modal{
+		overflow: inherit !important;
+	}
+	.rdw-colorpicker-option{
+		margin: 2px !important;
+		min-height: 20px !important;
+		min-width: 20px !important;
+		height: 20px !important;
+		width: 20px !important;
+	}
+	.rdw-colorpicker-option{
+		width: 20px !important;
+		height: 20px !important;
+	}
+	.rdw-embedded-modal,.rdw-image-modal,.rdw-link-modal{
+		button:disabled {
+		  color: rgba(0,0,0,.25) !important; 
+		  background-color: #f7f7f7 !important; 
+		  border-color: #d9d9d9 !important; 
+		  cursor: not-allowed;
+		}
+		button{
+			color: #fff !important;
+			background-color: #108ee9 !important;
+			border-color: #108ee9 !important; 
+			line-height: 30px;
+		}
+	}
+	
+}
 
