--- a/src/style.mod.less
+++ b/src/style.mod.less
@@ -43,6 +43,14 @@
 	.rdw-link-modal{
 		height: auto !important;
 	}
-	
+	.rdw-link-modal-target-option{
+		margin-top: 5px;
+	}
+	.rdw-link-modal-target-optiont{
+		margin-bottom: 0 !important;
+	}
+	.rdw-link-modal-target-option{
+		margin: 3px 0;
+	}
 }
 
