--- a/lib/style.mod.less
+++ b/lib/style.mod.less
@@ -1,7 +1,6 @@
 .wox-editor {
     height: 275px !important;
-    border: 1px solid #ccc !important;
-    padding: 15px !important;
+    padding: 10px !important;
     border-radius: 2px !important;
 }
 .wox-wrapper{
@@ -13,7 +12,7 @@
 		height: auto !important;
 		
 	}
-	.rdw-colorpicker-modal{
+	.rdw-colorpicker-modal-options{
 		overflow: inherit !important;
 	}
 	.rdw-colorpicker-option{
@@ -40,6 +39,9 @@
 			border-color: #108ee9 !important; 
 			line-height: 30px;
 		}
+	}
+	.rdw-link-modal{
+		height: auto !important;
 	}
 	
 }
