--- a/lib/style.mod.less
+++ b/lib/style.mod.less
@@ -49,7 +49,10 @@
 		margin-bottom: 0 !important;
 	}
 	.rdw-link-modal-target-option{
-		margin: 3px 0;
+		margin: 3px 0 !important;
+	}
+	.public-DraftStyleDefault-block{
+		margin: 3px 0 !important;
 	}
 }
 
