--- a/src/style.mod.less
+++ b/src/style.mod.less
@@ -1,58 +1,68 @@
-.wox-editor {
-    padding: 10px !important;
-    border-radius: 2px !important;
-}
-.wox-wrapper{
+.wox-editor-wrapper {
 	border: 1px solid #ccc !important;
 }
-:global{
-	.rdw-colorpicker-modal{
+
+.wox-editor {
+	padding: 10px !important;
+	border-radius: 2px !important;
+}
+
+:global {
+	.rdw-colorpicker-modal {
 		width: 230px !important;
 		height: auto !important;
-		
 	}
-	.rdw-colorpicker-modal-options{
+
+	.rdw-colorpicker-modal-options {
 		overflow: inherit !important;
 	}
-	.rdw-colorpicker-option{
+
+  .rdw-colorpicker-option {
 		margin: 2px !important;
 		min-height: 20px !important;
 		min-width: 20px !important;
 		height: 20px !important;
 		width: 20px !important;
 	}
-	.rdw-colorpicker-option{
+
+	.rdw-colorpicker-option {
 		width: 20px !important;
 		height: 20px !important;
 	}
-	.rdw-embedded-modal,.rdw-image-modal,.rdw-link-modal{
-		button:disabled {
-		  color: rgba(0,0,0,.25) !important; 
-		  background-color: #f7f7f7 !important; 
-		  border-color: #d9d9d9 !important; 
-		  cursor: not-allowed;
-		}
-		button{
-			color: #fff !important;
-			background-color: #108ee9 !important;
-			border-color: #108ee9 !important; 
-			line-height: 30px;
-		}
-	}
-	.rdw-link-modal{
-		height: auto !important;
-	}
-	.rdw-link-modal-target-option{
-		margin-top: 5px;
-	}
-	.rdw-link-modal-target-optiont{
-		margin-bottom: 0 !important;
-	}
-	.rdw-link-modal-target-option{
-		margin: 3px 0 !important;
-	}
-	.public-DraftStyleDefault-block{
-		margin: 3px 0 !important;
-	}
-}
 
+	.rdw-embedded-modal, .rdw-image-modal, .rdw-link-modal {
+	   button:disabled {
+       color: rgba(0,0,0,.25) !important;
+       background-color: #f7f7f7 !important;
+       border-color: #d9d9d9 !important;
+       cursor: not-allowed;
+     }
+
+     button {
+       color: #fff !important;
+       background-color: #108ee9 !important;
+       border-color: #108ee9 !important;
+       line-height: 30px;
+     }
+   }
+
+   .rdw-link-modal {
+     height: auto !important;
+   }
+
+   .rdw-link-modal-target-option {
+     margin-top: 5px;
+   }
+
+   .rdw-link-modal-target-optiont {
+     margin-bottom: 0 !important;
+   }
+
+   .rdw-link-modal-target-option {
+     margin: 3px 0 !important;
+   }
+
+   .public-DraftStyleDefault-block {
+     margin: 3px 0 !important;
+   }
+}
