--- a/src/style.mod.less
+++ b/src/style.mod.less
@@ -65,4 +65,7 @@
    .public-DraftStyleDefault-block {
      margin: 3px 0 !important;
    }
+   .rdw-colorpicker-modal,.rdw-embedded-modal,.rdw-image-modal,.rdw-link-modal,.rdw-emoji-modal{
+    left:-103px;
+   }
 }
